language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_todo_are_not_shown_for_dependency.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn webble() {\n  todo as \"webble\"\n}\n        "
---
-- app.gleam

pub fn webble() {
  todo as "webble"
  ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
