language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_todo_in_current_module.snap
---
source: language-server/src/tests/reference.rs
expression: "\nconst wibble = todo\npub const wobble = todo as \"wobble\"\n\nfn wubble() {\n  todo\n}\n\npub fn webble() {\n  todo as \"webble\"\n}\n\npub fn empty() {}\n\npub fn woo() {\n {}\n}\n        "
---
-- app.gleam

const wibble = todo
               ↑▔▔▔
pub const wobble = todo as "wobble"
                   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

fn wubble() {
  todo
  ▔▔▔▔
}

pub fn webble() {
  todo as "webble"
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}

pub fn empty() {}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔   

pub fn woo() {
 {}
 ▔▔
}
