language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_todo_in_same_package.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn webble() {\n  todo as \"webble\"\n}\n        "
---
-- woo.gleam

const wibble = todo
               ▔▔▔▔
pub const wobble = todo as "wobble"
                   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

fn wubble() {
  todo
  ▔▔▔▔
}

pub fn webble() {
  todo as "webble"
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}

pub fn empty() {}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔   

pub fn woo() {
 {}
 ▔▔
}
            


-- app.gleam

pub fn webble() {
  todo as "webble"
  ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
