language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_type_from_import_as.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport mod.{type Wibble as Wobble}\n\npub fn main() -> Wobble {\n  let _: mod.Wibble = todo\n}\n"
---
-- mod.gleam

pub type Wibble { Wibble }
         ▔▔▔▔▔▔           

fn wobble() -> Wibble {
               ▔▔▔▔▔▔  
  todo
}


-- app.gleam

import mod.{type Wibble as Wobble}
                 ▔▔▔▔▔▔ ↑         

pub fn main() -> Wobble {
                 ▔▔▔▔▔▔  
  let _: mod.Wibble = todo
             ▔▔▔▔▔▔       
}
