language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_type_from_qualified_reference.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport mod\n\npub fn main() -> mod.Wibble {\n  let _: mod.Wibble = todo\n}\n"
---
-- mod.gleam

pub type Wibble { Wibble }
         ▔▔▔▔▔▔           

fn wobble() -> Wibble {
               ▔▔▔▔▔▔  
  todo
}


-- app.gleam

import mod

pub fn main() -> mod.Wibble {
                     ↑▔▔▔▔▔  
  let _: mod.Wibble = todo
             ▔▔▔▔▔▔       
}
